sandbox/output
StringCalculatorTest.java:38: error: cannot find symbol
    public ExpectedException thrown = ExpectedException.none();
           ^
  symbol:   class ExpectedException
  location: class StringCalculatorTest
StringCalculatorTest.java:38: error: cannot find symbol
    public ExpectedException thrown = ExpectedException.none();
                                      ^
  symbol:   variable ExpectedException
  location: class StringCalculatorTest
2 errors
